# SamVadXR_Build_India_Hack_Context_Engine

./: .env.example  .gitignore  ExecutionPlan.md  ExecutionPlan_PromptImprovement.md  INTEGRATION_GUIDE.md  README.md  integration_response.md  pyproject.toml  requirements.txt  rules.md
app/: config.py  dependencies.py  exceptions.py  generate.py  logging_config.py  main.py
app/models/: __init__.py  enums.py  request.py  response.py
app/prompts/: vendor_system.py
app/services/: ai_brain.py  mocks.py  protocols.py  session_store.py  state_engine.py
services/: context_memory.py  exceptions.py  middleware.py  rag_ops.py  voice_ops.py
tests/: conftest.py  test_ai_brain.py  test_api.py  test_generate.py  test_mocks.py  test_models.py  test_neo4j_integration.py  test_state_engine.py
